# flash-attention

./: .gitignore  .gitmodules  setup.py
csrc/: CMakeLists.txt  env_dict.py.in  setup.py
csrc/capi/: flash_attn.cu  flash_attn.h
csrc/flash_attn/: CMakeLists.txt  flash_api.cpp  flash_attn.cpp  flash_attn.h  flash_attn_with_bias_mask.cpp
csrc/flash_attn/src/: block_info.h  calc_reduced_attn_scores_kernel.h  cuda_utils.cu  cuda_utils.h  flash.h  flash_bwd_kernel.h  flash_bwd_launch_template.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  fmha.h  fmha_block_dgrad_kernel_1xN_loop.h  fmha_block_fprop_kernel_1xN.h  fmha_bwd_hdim64.cu  fmha_bwd_launch_template.h  fmha_bwd_with_mask_bias_hdim128.cu  fmha_bwd_with_mask_bias_hdim16.cu  fmha_bwd_with_mask_bias_hdim32.cu  fmha_bwd_with_mask_bias_hdim64.cu  fmha_bwd_with_mask_bias_launch_template.h  fmha_dgrad_kernel_1xN_loop.h  fmha_fprop_kernel_1xN.h  fmha_fwd_launch_template.h  fmha_fwd_with_mask_bias_hdim128.cu  fmha_fwd_with_mask_bias_hdim16.cu  fmha_fwd_with_mask_bias_hdim32.cu  fmha_fwd_with_mask_bias_hdim64.cu  fmha_fwd_with_mask_bias_launch_template.h  generate_kernels.py  kernel_traits.h  mask.h  philox.cuh  random_utils.h  softmax.h  static_switch.h  utils.cu
csrc/flash_attn/src/calc_reduced_attn_scores_dispatch/: hdim128_bf16_sm80.cu  hdim128_fp16_sm80.cu  hdim160_bf16_sm80.cu  hdim160_fp16_sm80.cu  hdim192_bf16_sm80.cu  hdim192_fp16_sm80.cu  hdim224_bf16_sm80.cu  hdim224_fp16_sm80.cu  hdim256_bf16_sm80.cu  hdim256_fp16_sm80.cu  hdim32_bf16_sm80.cu  hdim32_fp16_sm80.cu  hdim64_bf16_sm80.cu  hdim64_fp16_sm80.cu  hdim96_bf16_sm80.cu  hdim96_fp16_sm80.cu  launch_template.h
csrc/flash_attn/src/fmha/: gmem_tile.h  kernel_traits.h  softmax.h
csrc/flash_attn_with_bias_and_mask/: CMakeLists.txt  flash_attn.cpp  flash_attn.h  flash_attn_with_bias_mask.cpp  flash_attn_with_bias_mask.cu  flash_attn_with_bias_mask.h  fmha_api.cpp
csrc/flash_attn_with_bias_and_mask/src/: cuda_utils.cpp  cuda_utils.h  fmha.h  fmha_block_dgrad_fp16_kernel_loop.sm80.cu  fmha_bwd_hdim32.cu  fmha_bwd_launch_template.h  fmha_bwd_with_mask_bias_hdim128.cu  fmha_bwd_with_mask_bias_hdim32.cu  fmha_bwd_with_mask_bias_hdim64.cu  fmha_bwd_with_mask_bias_launch_template.h  fmha_dgrad_kernel_1xN_loop.h  fmha_fprop_kernel_1xN.h  fmha_fwd_with_mask_bias_hdim128.cu  fmha_fwd_with_mask_bias_hdim32.cu  fmha_fwd_with_mask_bias_hdim64.cu  fmha_fwd_with_mask_bias_launch_template.h  random_utils.h  utils.cu  utils.h
csrc/flash_attn_with_bias_and_mask/src/fmha/: gemm.h  gmem_tile.h  kernel_traits.h  softmax.h  utils.h
csrc/flash_attn_with_bias_and_mask/src/sm90/: fmha_bwd_with_mask_bias_sm90.cu  fmha_fwd_with_mask_bias_sm90.cu  fmha_sm90_interface.h
csrc/flash_attn_with_bias_and_mask/src/sm90/hopper/: mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  utils.h
